Development history / change log, please read from bottom up

Version 3.2.1 - xx yyy 2015
HoTTAdapter* - refine sensor detection - to rise chance not in text-modus segment

Version 3.2.0 - 01 Mar 2015
fix initial synchronization of measurements
fix Junsi iCharger 206, 208, 306, 3010 constant time step to 2 seconds
fix problem while copy graphics into clip board several time in sequence
fix JLog2 context help page selection 
fix JLog2 configuration dialog - set drop downs to editable false since this event wasn't handled and does not activate save button
fix error not loading color from OSD file some colors (1,1,1)
CSV2SerialAdapter - fix error handling of missing status 
HoTTAdapter - fix receiver only with channels times 10 error 
HoTTAdapter* - adapt capacity filter according actual power
HoTTAdapter* - adapt current filter
HoTTAdapter2* - correct scale sync reference in configuration Channels and SpeedControl
GPS-Logger* - enable GPX export (Garmin Virb)
UniLog2 - fix missing parsing of M-Link data
UniLog2 - fix configuration of symbol and unit for M-Link measurements
add Junsi iCharger 4010 Duo support (read log from SD storage)
add port enumeration ttyACM* Linux CDC ACM devices

Version 3.1.9 - 31 Dec 2014
enable absolute time for graphics time line
enable to set the font size of measurement values on digital display
several processing optimizations
fix caching algorithm to enable scale text color updated by color change 
fix Linux GTK3 incompatibility by exporting SWT_GTK3=0 in start scripts
IISI-Cockpit V2 - add statistics definition 
JetiAdapter - fix time step calculation for very short logs in respect of time
JetiAdapter - fix record naming while repeating measurement names with different sensors
HoTTAdapter* - update HoTTMdlViewer to latest 0.8 snapshot
HoTTAdapter* - fine tune some more filter settings
HoTTAdapter* - add measurement voltage Rx min and make EAM rpm to an extra measurement