@@ -193,7 +193,8 @@
 		<!-- ant antfile="build.xml" target="clean" dir="PowerLab" inheritall="true" / -->
 		<ant antfile="build.xml" target="clean" dir="Polaron" inheritall="true" />
 		<ant antfile="build.xml" target="clean" dir="OpenTxTelemetry" inheritall="true" />
-		<!-- add new device here -->
+		<ant antfile="build.xml" target="clean" dir="Akkumatik" inheritall="true" />
+				<!-- add new device here -->
 	</target>
 
 	<!-- install target -->
@@ -360,7 +361,8 @@
 		<!-- ant antfile="build.xml" target="package" dir="PowerLab" inheritall="true" / -->
 		<ant antfile="build.xml" target="package" dir="Polaron" inheritall="true" />
 		<ant antfile="build.xml" target="package" dir="OpenTxTelemetry" inheritall="true" />
-		<!-- add new device here -->
+		<ant antfile="build.xml" target="package" dir="Akkumatik" inheritall="true" />
+				<!-- add new device here -->
 	</target>
 
 	<fileset dir="${basedir}">
@@ -390,7 +392,7 @@
 			<include name="FutabaTelemetry/build/*.jar" />
 			<!-- include name="PowerLab/build/*.jar" / -->
 			<include name="Polaron/build/*.jar" />
-			<include name="OpenTxTelemetry/build/*.jar" />
+			<include name="Akkumatik/build/*.jar" />
 			<!-- add new device here -->
 		</patternset>
 	</fileset>
