@@ -2,6 +2,7 @@ Development history / change log, please read from bottom up
 
 Version 3.2.1 - xx yyy 2015
 HoTTAdapter* - refine sensor detection - to rise chance not in text-modus segment
+Akkumatik - add support
 
 Version 3.2.0 - 01 Mar 2015
 fix initial synchronization of measurements
